# telegram-block-device

./: .gitignore  Cargo.toml  README.md  crash_tests.sh  run_tests.sh
crates/tgdrive-cli/: Cargo.toml
crates/tgdrive-cli/src/: main.rs
crates/tgdrive-core/: Cargo.toml
crates/tgdrive-core/src/: backend.rs  block.rs  cache.rs  config.rs  format.rs  lib.rs
crates/tgdrive-nbd/: Cargo.toml
crates/tgdrive-nbd/src/: lib.rs  server.rs
crates/tgdrive-telegram/: Cargo.toml
crates/tgdrive-telegram/src/: client.rs  lib.rs
docs/: nbd.md  performance.md
scripts/: attach-nbd.sh  serve-local.sh
