[package]
name = "tgdrive"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
clap.workspace = true
dotenvy.workspace = true
serde_json.workspace = true
tgdrive-core = { path = "../tgdrive-core" }
tgdrive-nbd = { path = "../tgdrive-nbd" }
tgdrive-telegram = { path = "../tgdrive-telegram" }
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true
