[package]
name = "tgdrive-nbd"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
bytes.workspace = true
tgdrive-core = { path = "../tgdrive-core" }
tokio.workspace = true
tracing.workspace = true
